Fix layout issue in roast page

--- a/src/styles/element/custom.scss
+++ b/src/styles/element/custom.scss
@@ -11,6 +11,7 @@
 
 .el-badge {
   width: auto;
+  height: 100%;
 }
 
 .el-badge__content {
